--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -26,6 +26,14 @@
   	year 			= 2004,
 }
 
+@Misc{demeyder:statistiek,
+  	author 			= {De Meyer, H.},
+  	title 			= {Waarschijnlijkheidsrekening en statistiek},
+  	howpublished 	= {Course text},
+  	institution 	= {Ghent University},
+  	year 			= 2003,
+}
+
 @PhdThesis{vanderweken:similariteitsmaten,
   	author 		= {Van der Weken, D.},
   	title 		= {Het gebruik en de constructie van similariteitsmaten in beeldverwerking},
@@ -255,4 +263,14 @@
 	year 		= 2006,
 	month 		= jul,
 	address 	= {Paris, France},
+}
+
+@Inproceedings{stricker:similarity_of_color_images,
+    author 		= {Stricker, M. and Orengo, M.},
+    title 		= {Similarity of Color Images},
+    booktitle 	= {Storage and Retrieval for Image and Video Databases ({SPIE})},
+    pages 		= {381-392},
+    year 		= 1995,
+    month 		= oct,
+    address		= {Philadelphia, Pennsylvania},
 }
