--- a/Thesis/presentatie.tex
+++ b/Thesis/presentatie.tex
@@ -90,7 +90,8 @@
   \begin{opmerking}
   Notaties: $A^c = co_{N_s} A$, $A \cap B = A \cap_{T_M} B$, $A \cup B = A \cup_{S_M} B$,
   $A \setminus B = A \cap B^c$ en $A \triangle B = (A \setminus B) \cup (B \setminus A)$,
-  met $A$ en $B$ vaagverzamelingen, $N_s$ de standaardnegator, $T_M$ het minimum en $S_M$ het maximum.
+  met $A$ en $B$ vaagverzamelingen in een zelfde universum, $N_s$ de standaardnegator, 
+  $T_M$ het minimum en $S_M$ het maximum.
   \end{opmerking}
 }
 
