--- a/Thesis/similariteit.tex
+++ b/Thesis/similariteit.tex
@@ -214,6 +214,7 @@ om alles in te studeren.
 
 
 \section{Beperken van de rekentijd}
+\label{sectie:beperken_rekentijd}
 
 Hoewel de rekentijd voor onze praktische toepassing niet van cruciaal belang is, kan het beperken 
 ervan uiteraard geen kwaad. Door toch voldoende aandacht te schenken aan de rekentijd kunnen
