--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -5,7 +5,6 @@
   	year 		= 2001,
   	volume 		= 22,
   	number 		= 5,
-  	month 		= apr,
   	pages 		= {593--601},
 }
 
@@ -39,7 +38,6 @@
   	title 		= {Het gebruik en de constructie van similariteitsmaten in beeldverwerking},
   	school 		= {Ghent University},
   	year 		= 2004,
-  	month 		= may,
 }
 
 @MastersThesis{victor:aggregatieoperatoren,
@@ -54,7 +52,6 @@
   	title 			= {Content-Based Image Retrieval Sytems: A Survey},
   	institution 	= {Utrecht University},
   	year 			= 2002,
-  	month 			= oct,
   	howpublished 	= {\url{http://www.aa-lab.cs.uu.nl/cbirsurvey/}},
 }
 
@@ -65,7 +62,6 @@
   	volume 		= 10,
   	number 		= 1,
   	year 		= 1999,
-  	month 		= mar,
   	pages 		= {39--62},
 }
 
@@ -74,8 +70,6 @@
 	title 		= {Vector morphological operators for colour images},
 	booktitle 	= {International Conference on Image Analysis and Recognition (ICIAR)},
 	year 		= 2005,
-	month 		= sep,
-	address 	= {Toronto, Canada},
 }
 
 @Misc{philips:beeldverwerking,
@@ -100,9 +94,7 @@
   	volume    	= {11},
   	number    	= {6},
   	pages     	= {703--715},
-  	month     	= jun,
   	year      	= 2001,
-  	url       	= {http://vision.ece.ucsb.edu/publications/01IEEEManjunath.pdf}
 }
 
 @Inproceedings{vertan:fuzzy_histograms,
@@ -110,7 +102,6 @@
 	title 		= {Using Fuzzy Histograms and Distances for Color Image Retrieval},
 	booktitle 	= {Challenge of Image Retrieval},
 	year 		= 2000,
-	address 	= {Brighton},
 }
 
 @Inproceedings{vertan:embedding_fuzzy_logic_in_cbir,
@@ -118,8 +109,15 @@
   	title 		= {Embedding Fuzzy Logic in Content Based Image Retrieval},
   	booktitle 	= {International Conference of the North American Fuzzy Information Processing Society (NAFIPS)}, 
     pages		= {85--89}, 
-    month		= jul,
     year		= 2000,
+}
+
+@Inproceedings{vertan:upgrading_color_distribution_for_ir,
+	author		= {Vertan, C. and Boujemaa, N.},
+	title		= {Upgrading Color Distributions for Image Retrieval: can we do better?},
+	booktitle   = {Proceedings of the 4th International Conference on Advances in Visual Information Systems},
+  	pages     	= {178 - 188},
+  	year     	= 2000,
 }
  
 @Article{smeulders:cbir_end_of_early_years,
@@ -129,7 +127,6 @@
   	volume    	= {22},
   	number    	= {12},
   	pages     	= {1349--1380},
-  	month     	= dec,
   	year     	= 2000,
 }
 
@@ -140,7 +137,6 @@
   	volume    	= {6},
   	number    	= {7},
   	pages     	= {901--932},
-  	month     	= jul,
   	year      	= 1997,
 }
 
@@ -171,14 +167,12 @@
    	year 		= 2003,
 	booktitle 	= {Eurocon 2003 Proceedings},
 	editor 		= {Zajc, B. and Tkalcic, M.},
-	month 		= sep,
 }
 
 @Article{dekker:neuquant,
    	author 		= {Dekker, A.},
    	title 		= {Kohonen Neural Networks for Optimal Colour Quantization},
    	journal 	= {Network: Computation in Neural Systems},
-   	month 		= aug,
    	year 		= 1994,
    	volume 		= {5},
    	number 		= {3},
@@ -189,7 +183,6 @@
    	author 		= {Berens, J. and Finlayson, G. D. and Qiu, G.},
    	title 		= {Image indexing using compressed colour histograms},
    	journal 	= {IEE Proceedings: Vision, Image and Signal Processing},
-   	month 		= aug,
    	year 		= 2000,
    	volume 		= {147},
    	number 		= {5},
@@ -200,7 +193,6 @@
    	title 		= {A Histogram with Perceptually Smooth Color Transition for Image Retrieval},
    	year 		= 2002,
 	booktitle 	= {International Conference on Computer Vision, Pattern Recognition and Image Processing (CVPRIP)},
-	month 		= mar,
 	pages		= {664--667},
 }
 
@@ -209,7 +201,6 @@
    	title 		= {The utilization of human color categorization for content-based image retrieval},
    	year 		= 2004,
 	booktitle 	= {Human Vision and Electronic Imaging IX},
-	month 		= jan,
 	pages		= {351--362},
 }
 
@@ -217,7 +208,6 @@
    	author 		= {Wu, X.},
    	title 		= {Color quantization by dynamic programming and pricipal analysis},
    	journal 	= {ACM Transactions on Graphics},
-   	month 		= oct,
    	year 		= 1992,
    	volume 		= {11},
    	number 		= {4},
@@ -230,7 +220,6 @@
   	volume 		= 133,
   	number 		= 2,
   	year 		= 2003,
-  	month 		= jan,
   	pages 		= {137--153},
 }
 
@@ -241,7 +230,6 @@
   	volume 		= 133,
   	number 		= 2,
   	year 		= 2003,
-  	month 		= jan,
   	pages 		= {181--192},
 }
 
@@ -252,7 +240,6 @@
   	volume 		= 3,
   	number 		= 2,
   	year 		= 1971,
-  	month		= apr,
   	pages 		= {177--200},
 }
 
@@ -261,8 +248,6 @@
 	title 		= {The construction of quality measures for colour images: two approaches},
 	booktitle 	= {Information Processing and Management of Uncertainty in Knowledge-Based Systems (IPMU)},
 	year 		= 2006,
-	month 		= jul,
-	address 	= {Paris, France},
 }
 
 @Inproceedings{stricker:similarity_of_color_images,
@@ -271,6 +256,41 @@
     booktitle 	= {Storage and Retrieval for Image and Video Databases ({SPIE})},
     pages 		= {381-392},
     year 		= 1995,
-    month 		= oct,
-    address		= {Philadelphia, Pennsylvania},
+}
+
+@Incollection{schettini:survey_of_methods_for_colour_image_indexing_and_retrieval,
+	author		= {Schettini, R. and Ciocca, G. and Zuffi, S.},
+	editor		= {Luo, R. and MacDonald, L.}, 
+	booktitle	= {Color Imaging Science: Exploiting Digital Media},
+	title		= {A survey of methods for colour image indexing and retrieval in image databases}, 
+	publisher	= {J. Wiley}, 
+	year		= 2001
+}
+
+@Article{swain:color_indexing,
+  	author 		= {Swain, M. and Ballard, D.},
+  	title 		= {Color Indexing},
+  	journal 	= {International Journal of Computer Vision},
+  	volume 		= 7,
+  	number 		= 1,
+  	year 		= 1991,
+  	pages 		= {11--32},
+}
+
+@Inproceedings{lu:perceptually_weighted_histograms_for_ir,
+	author		= {Lu, G. and Phillips, J.},
+	title		= {Using Perceptually Weighted Histograms for Colour-Based Image Retrieval},
+	pages		= {1150--1153},
+	year		= 1998,
+	booktitle	= {Proceedings of the 4th International Conference on Signal Processing},
+}
+
+@Article{jawahar:fuzzy_statistics_of_digital_images,
+	author		= {Jawahar, C. and Ray, A.},
+	title		= {Fuzzy statistics of digital images},
+	pages		= {225--227},
+	year		= 1996,
+	journal		= {IEEE Signal Processing Letters},
+	volume		= 3,
+	number		= 8,
 }
